--- a/wireframe atividade em grupo/main.html
+++ b/wireframe atividade em grupo/main.html
@@ -1,9 +1,121 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Página Web</title>
 	<style>
+    body {
+	background-color: #f2f2f2;
+	margin: 0;
+	padding: 0;
+}
+
+header {
+	background-color: #f2f2f2;
+	border-bottom: 1px solid black;
+	margin: 0;
+	padding: 20px;
+	text-align: center;
+}
+
+main {
+	display: flex;
+	flex-direction: row;
+	margin: 50px auto;
+	max-width: 1280px;
+}
+
+.left-container {
+	background-color: #d3d3d3;
+	border: 1px solid black;
+	box-sizing: border-box;
+	padding: 20px;
+	width: 30%;
+}
+
+.right-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-left: 20px;
+	width: 70%;
+}
+
+.image-container {
+	background-color: #d3d3d3;
+	border: 1px solid black;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+  margin-right: 20px;
+	padding: 20px;
+	text-align: left;
+}
+
+footer {
+	background-color: #f2f2f2;
+	border-top: 1px solid black;
+	margin: 50px auto;
+	padding: 20px;
+	text-align: center;
+}
+
+h1, h2, p {
+	margin: 0;
+  vertical-align: center;
+  text-align: center;
+  overflow: hidden;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+  text-align: center;
+  vertical-align: middle;
+}
+
 	</style>
 </head>
+<body>
+	<header>
+		<h1>ESUP</h1>
+    <h3>Nosso projeto</h3>
+	</header>
+	<main>
+		<section class="left-container">
+			<h1>Inicio</h1>
+      <br>
+			<h2>Exercicio Poemas</h2>
+      <h2>Exercicio Piada</h2>
+      <h2>Exercicio Listas</h2>
+      <h2>Exercicio Tabelas</h2>
+      <br>
+      <h1>ESUP</h1>
+      <br>
+      <h2 href="https://esup.edu.br/sobre-nos/">Sobre nós</h2>
+      <h2 href="https://esup.edu.br/cursos/sistemas-de-informacao/">Sistemas de informação</h2>
+      <h2 href="https://esup.edu.br/#">Programas</h2>
+		</section>
+		<section class="right-container">
+			<div class="image-container">
+				<img src="gui.png" alt="Imagem 1">
+				<h2>Aluno: Guilherme Henrique Alves da Costa</h2>
+        <h3>Meu nome é Guilherme, tenho 20 anos, nasci e resido em Goiânia Goiás, sou apaixonado <br>por tecnologia e trabalho na área de Ecommerce atualmente na empresa Ambrô.</h3>
+			</div>
+			<div class="image-container">
+				<img src="anne.png" alt="Imagem 2">
+				<h2>Aluna: Daliane Costa Leite</h2>
+        <h3>Daliane, 24 anos! Natural dê Gurupi-TO Moro em Goiânia a 8 anos, sou mãe, estudante, <br>estagiária e gosto de blogueirar nas horas vagas!</h3>
+			</div>
+			<div class="image-container">
+				<img src="bernardo.png" alt="Imagem 3">
+				<h2>Aluno: Bernardo junio Alves Bispo</h2>
+        <h3>
+          Eu sou Bernardo, nascido e criado em Aparecida de Goiânia Go, estudante de Sistema de informação na faculdade Esup e trabalha em período integral em uma loja de roupas a 4 anos.</h3>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<h2>Trabalho desenvolvido para a obtenção de créditos na disciplina <br>de Introdução do Desenvolvimento Web, sob orientação do professor Aliberto Neto.</h2>
+	</footer>
+</body>
 </html>
