--- a/wireframe atividade em grupo/main.html
+++ b/wireframe atividade em grupo/main.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -91,26 +91,37 @@ img {
       <br>
       <h1>ESUP</h1>
       <br>
-      <h2 href="https://esup.edu.br/sobre-nos/">Sobre nós</h2>
-      <h2 href="https://esup.edu.br/cursos/sistemas-de-informacao/">Sistemas de informação</h2>
-      <h2 href="https://esup.edu.br/#">Programas</h2>
+      <a href="https://esup.edu.br/sobre-nos/">Sobre nós</a>
+      <a href="https://esup.edu.br/cursos/sistemas-de-informacao/">Sistemas de informação</a>
+      <a href="https://esup.edu.br/#">Programas</a>
 		</section>
 		<section class="right-container">
 			<div class="image-container">
 				<img src="gui.png" alt="Imagem 1">
 				<h2>Aluno: Guilherme Henrique Alves da Costa</h2>
         <h3>Meu nome é Guilherme, tenho 20 anos, nasci e resido em Goiânia Goiás, sou apaixonado <br>por tecnologia e trabalho na área de Ecommerce atualmente na empresa Ambrô.</h3>
+		<br>
+		<h3>#html #python #css #backend #aws</h3>
+		<br>
+		<a href="https://github.com/L1nkZILLA">Perfil do GitHub</a>
 			</div>
 			<div class="image-container">
 				<img src="anne.png" alt="Imagem 2">
 				<h2>Aluna: Daliane Costa Leite</h2>
         <h3>Daliane, 24 anos! Natural dê Gurupi-TO Moro em Goiânia a 8 anos, sou mãe, estudante, <br>estagiária e gosto de blogueirar nas horas vagas!</h3>
+		<br>
+		<h3>#programacao #css #tecnologia #frontend</h3>
+		<br>
+		<a href="https://github.com/Annebg">Perfil no GitHub</a>
 			</div>
 			<div class="image-container">
 				<img src="bernardo.png" alt="Imagem 3">
 				<h2>Aluno: Bernardo junio Alves Bispo</h2>
-        <h3>
-          Eu sou Bernardo, nascido e criado em Aparecida de Goiânia Go, estudante de Sistema de informação na faculdade Esup e trabalha em período integral em uma loja de roupas a 4 anos.</h3>
+        <h3>Eu sou Bernardo, nascido e criado em Aparecida de Goiânia Go, estudante de Sistema de informação na faculdade Esup e trabalha em período integral em uma loja de roupas a 4 anos.</h3>
+		<br>
+		<h3>#front-end #programacao #design</h3>
+		<br>
+		<a href="https://github.com/B1ernard0">Perfil no GitHub</a>
 			</div>
 		</section>
 	</main>
