--- a/wireframe atividade em grupo/main.html
+++ b/wireframe atividade em grupo/main.html
@@ -115,8 +115,8 @@ img {
 		<a href="https://github.com/Annebg">Perfil no GitHub</a>
 			</div>
 			<div class="image-container">
-				<img src="bernardo.png" alt="Imagem 3">
-				<h2>Aluno: Bernardo junio Alves Bispo</h2>
+				<img src="bernardo.png" alt="Bernardo">
+				<h2>Aluno: Bernardo Junio Alves Bispo</h2>
         <h3>Eu sou Bernardo, nascido e criado em Aparecida de Goiânia Go, estudante de Sistema de informação na faculdade Esup e trabalha em período integral em uma loja de roupas a 4 anos e busco profissão na área de tecnologia.</h3>
 		<br>
 		<h3>#front-end #programacao #design</h3>
